# cosyvoice-ray-serve-api

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt  ruff.toml  start.sh
.claude/: settings.json
.claude/skills/smoke-test/: SKILL.md
cosyvoice/: api.py
cosyvoice/cli/: model.py
cosyvoice/dataset/: dataset.py
cosyvoice/llm/: llm.py
cosyvoice/utils/: train_utils.py
docs/: API.md  DOCKER.md  api.html  architecture.html  deployment.html  index.html  style.css
